# diff-volume-renderer

./: .gitignore  CMakeLists.txt  DESIGN_SPECIFICATION.md  FEATURES.md  README.md  main.cpp  vcpkg.json
.github/workflows/: linux-build.yml  macos-build.yml  windows-build.yml
apps/dvren_render/: main.cpp
cmake/: setup_tcnn.cmake  setup_vcpkg.cmake  setup_vdb.cmake
examples/: simple_volume.json
hotpath/: .gitignore  CMakeLists.txt  DESIGN_SPECIFICATION.md  HP9_IMPLEMENTATION_COMPLETE.md  HP9_QUICKSTART.md  HP9_README.md  IMPLEMENTATION_VALIDATION_REPORT.md  README.md  run_hp9_validation.bat  test_hp7.cpp
hotpath/.github/workflows/: ci.yml
hotpath/include/hotpath/: hp.h
hotpath/scripts/: archive_artifacts.py  ci_check.py  lock_thresholds.py  profile.py  test_all_scripts.py  validate_gates.py
hotpath/src/cpu/: diff_cpu.cpp  grid_dense_cpu.cpp  hash_mlp_cpu.cpp  img_cpu.cpp  int_cpu.cpp  ray_cpu.cpp  samp_cpu.cpp  samp_int_fused.cpp
hotpath/src/cuda/: diff_cuda.cu  graph_cuda.cu  hash_mlp_cuda.cu  img_cuda.cu  int_cuda.cu  ray_cuda.cu  samp_int_fused.cu
hotpath/src/runtime/: api_ray.cpp  hp_internal.hpp  hp_runner_impl.cpp  hp_runtime.cpp  runner.cpp  workspace.hpp
hotpath/tests/: manifest.yaml  perf_scenarios.yaml  thresholds.yaml
hotpath/tests/runner/: hp_runner.cpp
include/: dvren.h
include/dvren/core/: context.hpp  plan.hpp  status.hpp  tensor_utils.hpp
include/dvren/fields/: dense_grid.hpp
include/dvren/render/: renderer.hpp
src/adapters/: field_grid.cu
src/core/: compositor.cu  context.cpp  ctx_store.cu  plan.cpp  sampler.cu  status.cpp  tensor_utils.cpp  volume_backward.cu  volume_forward.cu
src/fields/: dense_grid.cpp
src/render/: renderer.cpp
test/: test_grad.cpp
tests/core/: test_core.cpp
tests/render/: smoke_test_utils.hpp  test_sdf_sphere.cpp  test_smoke_animation.cpp  test_smoke_forward.cpp  test_smoke_forward_highres.cpp
tutorials/: CMakeLists.txt
tutorials/chapter01/: task00.cpp  task01.cpp  task02.cpp
